<resources>
    <string name="app_name">MiDiplomado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Tienda</string>
    <string name="menu_slideshow">Plataforma</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_notify">Notificaciones</string>
    <string name="welcome">Bienvenido</string>


    ****************************************cursos***********************************************************************************

    <string name="tienda">Tienda</string>
    <string name="title_activity_notifi">NotifiActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>