<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.afinal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.afinal.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.afinal.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_slideshow_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_blog"
        android:name="com.example.afinal.ui.blog.blog"
        android:label="@string/menu_blog"
        tools:layout="@layout/blog_fragment"  >
        <action
            android:id="@+id/action_nav_blog_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_notify"
        android:name="com.example.afinal.ui.notify.Notify"
        android:label="@string/menu_notify"
        tools:layout="@layout/notify_fragment" >
        <action
            android:id="@+id/action_nav_notify_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>